--- a/index.html
+++ b/index.html
@@ -1,63 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <meta charset= "utf-8"/>
   <title>REPUBLIC HIGH SCHOOL</title>
+  <meta charset= "utf-8"/>
+  <link rel="stylesheet" href="style.css"/>
  </head>
  <body>
-  <a href="home.html">HOME</a>
-  <a href="dormitory.html">DORMITORY</a>
-  <a href="news.html">NEWS</a>
-  <a href="contact.html">CONTACT</a>
-  <h1>IMAGE</h1>
+  <div>
+   <a href="index.html">HOME</a>
+   <a href="dormitory.html">DORMITORY</a>
+   <a href="images.html">IMAGES</a>
+   <a href="contact.html">CONTACT</a>
+  </div>
   <img src="cflphoto1.jpg" alt="CFL" width="600" height="446">
-  <h2>HISTORY</h2>
-  <p>Our school started education in 1944-1945. The secondary school part, which gave     its last graduates in the 1996 - 1997 academic year, was closed. Our school was         continued just high school. Ministry of National Education, our school has been         transformed to a science high school. Our school was accepting its first students       in the 2013-2014 academic year.It has become one of the most preferred schools in       Ankara.</p>
-  <style>table, th, td {border: 1px solid black;} th, td{padding: 25px ;text-align:       left ;background-color: #eee}
-  </style>
-  <table style="width:100%">
-   <caption>DORMITORY WEEKLY MENU</caption>
-   <tr>
-    <th>MENU</th>
-    <th>MONDAY</th>
-    <th>TUESDAY</th> 
-    <th>WEDNESDAY</th>
-    <th>THURSDAY</th>
-    <th>FRIDAY</th>
-   </tr>
-   <tr>
-    <td>SOUP</td>
-    <td>Ezogelin</td>
-    <td>Yayla</td>
-    <td>Mercimek</td>
-    <td>Mantar</td>
-    <td>Domates</td>
-   </tr>
-   <tr>
-    <td>MAIN COURSE</td>
-    <td>Makarna</td>
-    <td>Manti</td>
-    <td>Firinda Tavuk</td>
-    <td>Lahmacun</td>
-    <td>Kuru Fasulye</td>
-   </tr>
-   <tr>
-    <td>DESSERT</td>
-    <td>Kemal Pasa</td>
-    <td>Sekerpare</td>
-    <td>Baklava</td>
-    <td>Irmik Helvasi</td>
-    <td>Sobiyet</td>
-   </tr>
-   <tr>
-    <td>Drink</td>
-    <td>Ayran</td>
-    <td>Ayran</td>
-    <td>Ayran</td>
-    <td>Ayran</td>
-    <td>Ayran</td>
-   </tr>
-  </table>
-
+  <h1>HISTORY</h1>
+  <div>
+  <p>Our school started education in 1944-1945. The secondary school part, which gave       its last graduates in the 1996 - 1997 academic year, was closed. Our school was           continued just high school. Ministry of National Education, our school has been           transformed to a science high school. Our school was accepting its first students         in the 2013-2014 academic year.It has become one of the most preferred schools in         Ankara.</p>
+  </div>
+  <h2>NUMBER OF ACCEPTED STUDENTS</h2>
+  <dl>
+   <dt>2016-2017</dt>
+   <dd>106 student</dd>
+   <dt>2017-2018</dt>
+   <dd>110 student</dd>
+   <dt>2018-2019</dt>
+   <dd>113 student</dd>
+   <dt>2019-2020</dt>
+   <dd>122 student</dd>
+  </dl>
  </body>
 </html>
